--- a/Landing_page.html
+++ b/Landing_page.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Page Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow" id="header1-1" style="background-image: url(assets/images/main-picture-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow" id="header1-1" style="background-image: url(assets/images/main-picture-2000x1333.jpg);">
 
     
 
@@ -245,7 +245,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="QUOTE">
 
-                        <input type="hidden" value="gVNX8tF3i8JXfX8IqfO7+Bk8010cq7mRvqiBUYY0VWg+iWlbMa0ctSv7Cjb+yqH9nRkMwodMAVryslXVXrPW5SChQM2paLaQkEnWvpyiVuM2Tel0d8Ou8ww15xZVuWjF" data-form-email="true">
+                        <input type="hidden" value="h443EhAKYSKhvB+ulz4ZyFMQE+rZ1OyYmFY9/L/y9ymcknqqXR931rC7iv2ixeteJrUwQ3hdvFF7k6GODShvq2812VPhDt3Nc+0/yszd4dlyLyZQ+5ps07KkzPB4NmPi" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
