--- a/Services.html
+++ b/Services.html
@@ -44,7 +44,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="Landing_page.html">MAIN PAGE</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">MAIN PAGE</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-19" style="background-image: url(assets/images/engineering-team-hard-at-work-photo-credit-the-muse-1-2000x870.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Site Builder</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-19" style="background-image: url(assets/images/engineering-team-hard-at-work-photo-credit-the-muse-1-2000x870.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -108,7 +108,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="QUOTE">
 
-                        <input type="hidden" value="sLw/idajd+2tUdMgG15uZLydyR1xBf0itnaqkKD7ut4UgGSl4y02WWm9y/Laj45fVRJa4UCWCfoyyo6ZWri6yKDZe0DhpklnuPEb83GH0xgZsgIJsOoi7vDZUH2n90sc" data-form-email="true">
+                        <input type="hidden" value="Op2efI1Y+3TfLVUzOGTW0kSz7fJRqRsvRS8x8dyGOQtd/zbpfMyoOosgjRMTScFp4sctqhMIA11RUUR07DkO1YwLBilb9cI9NqR3Yqa01ApW1KlPITvh6YOnSCP5B9/r" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
