--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="Services_Geotechnics.html" aria-expanded="false">SERVICES</a></li><li class="nav-item"><a class="nav-link link" href="About.html">ABOUT<br></a></li><li class="nav-item"><a class="nav-link link" href="Landing_page.html#contacts1-j">+44 203 290 0506</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="Services.html" aria-expanded="false">SERVICES</a></li><li class="nav-item"><a class="nav-link link" href="About.html">ABOUT<br></a></li><li class="nav-item"><a class="nav-link link" href="Landing_page.html#contacts1-j">+44 203 290 0506</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow" id="header1-1" style="background-image: url(assets/images/main-picture-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Generator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow" id="header1-1" style="background-image: url(assets/images/main-picture-2000x1333.jpg);">
 
     
 
@@ -345,7 +345,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="QUOTE">
 
-                        <input type="hidden" value="5QRnle57/CFpT9bypVYAf104Gc2aM6wMLOukA1Z+gDgWGzUstKNtn+xV0BfCAG/VOQjGLRzhztXvcj41xjMoRYBi/zfCYI2Eig3RN3FDtBVsLmvHf6Fo7T2O2JbT+BoU" data-form-email="true">
+                        <input type="hidden" value="mtxNggYhVSRwdjOx53yMoEhKUoYUyRlMIN2FjwMikYXMU1gltxQ5HuVU9Si155govDASA0TuumPrkKhlmGvnfc/JBQS9brFU4bCbWF8Ezx8jgryJzv3hy3LYedkcW6Qq" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -435,17 +435,6 @@ Phone: +44 203 290 0506<br></p>
   <script src="assets/mobirise-gallery/script.js"></script>
   <script src="assets/formoid/formoid.min.js"></script>
   
-  <!-- Hotjar Tracking Code for corbelium.com -->
-<script>
-    (function(h,o,t,j,a,r){
-        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-        h._hjSettings={hjid:553023,hjsv:5};
-        a=o.getElementsByTagName('head')[0];
-        r=o.createElement('script');r.async=1;
-        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-        a.appendChild(r);
-    })(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
   
   <input name="animation" type="hidden">
    <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon"></i></a></div>
