--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Generator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow" id="header1-1" style="background-image: url(assets/images/main-picture-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Website Generator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow" id="header1-1" style="background-image: url(assets/images/main-picture-2000x1333.jpg);">
 
     
 
@@ -160,7 +160,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <div class="text-xs-center"><a class="btn btn-danger" href="https://mobirise.com/mobirise-free-win.zip">MORE DETAILS</a> </div>
+                <div class="text-xs-center"><a class="btn btn-danger" href="Services.html">MORE DETAILS</a> </div>
             </div>
         </div>
     </div>
@@ -345,7 +345,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="QUOTE">
 
-                        <input type="hidden" value="mtxNggYhVSRwdjOx53yMoEhKUoYUyRlMIN2FjwMikYXMU1gltxQ5HuVU9Si155govDASA0TuumPrkKhlmGvnfc/JBQS9brFU4bCbWF8Ezx8jgryJzv3hy3LYedkcW6Qq" data-form-email="true">
+                        <input type="hidden" value="bYpeLbwyyk8FOh28qL6+h8kiklkyL6zJ0mmjkXnw6Z7NZbWJ5vAxYqw2RgXRPpWLEvusAyAZETd9l5CqPkG9IYA+t+/4m7bv9aKUbkP9zY3uuG/WE9rKHdFZurIQcgUp" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
