--- a/About.html
+++ b/About.html
@@ -33,7 +33,7 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="Landing_page.html" class="navbar-logo"><img src="assets/images/corbelium-logo-site-logo-837x128.png" alt="Mobirise"></a>
+                        <a href="index.html" class="navbar-logo"><img src="assets/images/corbelium-logo-site-logo-837x128.png" alt="Mobirise"></a>
                         <a class="navbar-caption" href="https://mobirise.com"></a>
                     </div>
 
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Maker</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-1s" style="background-image: url(assets/images/mbr-6-2000x1333.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-1s" style="background-image: url(assets/images/mbr-6-2000x1333.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
