--- a/Services.html
+++ b/Services.html
@@ -33,7 +33,7 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="Landing_page.html" class="navbar-logo"><img src="assets/images/corbelium-logo-site-logo-837x128.png" alt="Mobirise"></a>
+                        <a href="index.html" class="navbar-logo"><img src="assets/images/corbelium-logo-site-logo-837x128.png" alt="Mobirise"></a>
                         <a class="navbar-caption" href="https://mobirise.com"></a>
                     </div>
 
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-19" style="background-image: url(assets/images/engineering-team-hard-at-work-photo-credit-the-muse-1-2000x870.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Builder</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-19" style="background-image: url(assets/images/engineering-team-hard-at-work-photo-credit-the-muse-1-2000x870.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -108,7 +108,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="QUOTE">
 
-                        <input type="hidden" value="tjY/DwfeOzfDgeFaHIwaKy2aju9PUPaEvx9Yil+sbSZ8U4NQIEoU14iH6TfrK/d7L0hU84GNvTs9gpcb4ZvUFXmDtgrs8JXyuqwMqlzKnGk6aLc1cT9g8D0PsfESB5yR" data-form-email="true">
+                        <input type="hidden" value="TlbUeDVMDM18ccYFt5v8hJNo142XAt5DX1Z3zORrVEIINyLc7PMhb77CQNr+kvYOWyEYywdEp1oggl0cdzE3mm85kYQMO/xTEOCp9meThh0rclJ+wgjk37VrERMqCxyP" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
