--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="Landing_page.html#contacts1-j" class="navbar-logo"><img src="assets/images/corbelium-logo-site-logo-837x128.png" alt="Mobirise"></a>
+                        <a href="index.html" class="navbar-logo"><img src="assets/images/corbelium-logo-gray-small-618x128.png" alt="Mobirise"></a>
                         <a class="navbar-caption" href="https://mobirise.com"></a>
                     </div>
 
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow" id="header1-1" style="background-image: url(assets/images/main-picture-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Website Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow" id="header1-1" style="background-image: url(assets/images/main-picture-2000x1333.jpg);">
 
     
 
@@ -70,7 +70,7 @@
             <div class="row">
                 <div class="mbr-section col-md-10 col-md-offset-1 text-xs-center">
 
-                    <h1 class="mbr-section-title display-1"><span style="line-height: 1.1;">Professional</span><br><span style="line-height: 1.1;"> Architectural and Civil Engineering </span><br><span style="line-height: 1.1;">Outsourcing</span><br></h1>
+                    <h1 class="mbr-section-title display-1"><span style="line-height: 1.1;">On-demand&nbsp;</span><span style="line-height: 1.1;">Architecture and Civil Engineering </span><br><br></h1>
                     <p class="mbr-section-lead lead"><span style="font-style: normal; line-height: 1.5;">We empower your business with enterprise-level outsourcing opportunities, access to a large pool of skills and considerable project cost reduction.</span><br><span style="font-style: normal;"><br></span><span style="font-style: normal;"><br></span></p>
                     <div class="mbr-section-btn"><a class="btn btn-lg btn-danger" href="index.html#form1-c">GET A QUOTE</a> </div>
                 </div>
@@ -345,7 +345,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="QUOTE">
 
-                        <input type="hidden" value="vHs1mw7kRcVOJqCITn8BB7ZB9mWZPhVNjZtJfSdGnLMW4wZh3G0Xca35kQ91yXFkCRXjD2VwFqIURa+zN6gJiyy6xX2fKbYZDlrvxOkg2wVmyWFVMnSRiMgwiSp9GmI6" data-form-email="true">
+                        <input type="hidden" value="DeFCLuDjGID2suF9CLBX9BDUPfBLmrnFzQWQlDMGbdaJt/jTaieFZ5/+lse+Vwzya+mDjyl8RAyskc794Y9XhBlTyMmf2MPH4woxWr4nGVHtlCorukHvJ3en0dTEoztj" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
